# libshs

./: .gitignore  CMakeLists.txt  README.md  main.c
Formula/: shs.rb
include/: file_table.h  q_string.h  shs_accessor.h  shs_binary.h  shs_file.h  shs_inner_file_table.h  shs_pack.h
src/: CMakeLists.txt  file_table.c  q_string.c  shs_accessor.c  shs_binary.c  shs_file.c  shs_inner_file_table.c  shs_pack.c  shs_pack_main.c  shs_read_main.c
src/flatccrt/: CMakeLists.txt
